Enable local file and URL loading

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
         "request": "launch",
         "preLaunchTask": "build",
         "program": "${env:GODOT4}",
-        "args": [],
+        "args": ["/Users/dennisvanoosterhout/projects/JSONTimer/training.json"],
         "cwd": "${workspaceFolder}",
         "stopAtEntry": false,
       }
